--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,9 @@
-<h2 id="title">Welcome to Ember</h2>
+<p>d3.js force layout POC</p>
 
-{{outlet}}
+{{force-layout
+    data=data
+    clickOption1='clickOption1'
+    clickOption2='clickOption2'
+    clickOption3='clickOption3'
+    clickOption4='clickOption4'
+}}
