--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,7 @@
 
 {{force-layout
     data=data
+    mutate='mutateData'
     clickOption1='clickOption1'
     clickOption2='clickOption2'
     clickOption3='clickOption3'
