added example for static force layout with update pattern

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <p>d3.js force layout POC</p>
 
-{{force-layout
+{{static-force-layout
     data=data
     mutate='mutateData'
     clickOption1='clickOption1'
