static force layout highlight linked relationships

--- a/app/templates/components/static-force-layout.hbs
+++ b/app/templates/components/static-force-layout.hbs
@@ -1,2 +1,6 @@
 <svg id="graph"></svg>
+{{#if isLoading}}
+  Please wait while the simulation loads
+{{else}}
 <button {{action 'mutate'}}>mutate</button>
+{{/if}}
